--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/vue": "^4.3.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "bootswatch": "^4.4.1",
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
@@ -29,6 +30,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
@@ -37,13 +39,19 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
+    "bootstrap": "^4.3.1",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "mutationobserver-shim": "^0.3.3",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
     "prettier": "^1.19.1",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
+    "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
