--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "cron": "^1.8.2",
     "debug": "~2.6.9",
     "discord-interface": "^1.3.9",
     "discord-oauth2": "^2.0.2",
